--- a/src/Components/UiKit/Input/Input.module.scss
+++ b/src/Components/UiKit/Input/Input.module.scss
@@ -15,12 +15,17 @@
 .input-root {
 	padding-top: 10px !important;
 }
-
-
-
-
-
-
+// input:-webkit-autofill,
+// input:-webkit-autofill:hover,
+// input:-webkit-autofill:focus,
+// input:-webkit-autofill:active {
+// 	-webkit-box-shadow: 0 0 0 30px white inset;
+// }
+// input::-webkit-outer-spin-button,
+// input::-webkit-inner-spin-button {
+// 	-webkit-appearance: none;
+// 	margin: 0;
+// }
 
 // /* Firefox */
 // input[type='number'] {
