--- a/src/Components/FormForgotPassword/FormForgotPassword.module.scss
+++ b/src/Components/FormForgotPassword/FormForgotPassword.module.scss
@@ -1,1 +1,13 @@
 @import '@/styles/colors.scss';
+
+.input {
+  width: 100%;
+  max-height: 54px;
+  height: 100%;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #454545;
+  padding-left: 20px;
+  font-size: 20px;
+  color: rgba(69, 69, 69, 0.5);
+}
