--- a/src/Components/FormLogin/FormLogin.module.scss
+++ b/src/Components/FormLogin/FormLogin.module.scss
@@ -1,5 +1,17 @@
 @import '@/styles/colors.scss';
 
 .container {
-	margin: 70px 70px 70px 0;
+  margin: 70px 70px 70px 0;
+}
+
+.input {
+  width: 100%;
+  max-height: 54px;
+  height: 100%;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #454545;
+  padding-left: 20px;
+  font-size: 20px;
+  color: rgba(69, 69, 69, 0.5);
 }
