--- a/src/styles/ForgotPassword.module.scss
+++ b/src/styles/ForgotPassword.module.scss
@@ -7,6 +7,18 @@
   justify-content: center;
   align-items: center;
 
-  .forgot-password-container {
-  }
+  // .forgot-password-container {
+  // }
+}
+
+.input {
+  width: 100%;
+  height: 54px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #454545;
+  padding-left: 20px;
+  font-size: 20px;
+  color: rgba(69, 69, 69, 0.5);
+  margin-bottom: 20px;
 }
