--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import 'colors';
-@import 'reset';
+@import "colors";
+@import "reset";
 
 .background-auth-wrapper {
   background: rgb(255, 129, 129);
