--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,14 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 /* Указываем box sizing */
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Убираем внутренние отступы */
 ul[class],
 ol[class] {
-	padding: 0;
+  padding: 0;
 }
 
 /* Убираем внешние отступы */
@@ -28,40 +34,39 @@ figcaption,
 blockquote,
 dl,
 dd {
-	margin: 0;
-	font-family: 'Inter' !important;
+  margin: 0;
 }
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
-	scroll-behavior: smooth;
-	text-rendering: optimizeSpeed;
-	line-height: 1.5;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
-	list-style: none;
+  list-style: none;
 }
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-	text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 div {
-	font-family: 'Inter';
+  font-family: "Inter";
 }
 
 /* Упрощаем работу с изображениями */
 img {
-	max-width: 100%;
-	display: block;
+  max-width: 100%;
+  display: block;
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
 article > * + * {
-	margin-top: 1em;
+  margin-top: 1em;
 }
 
 /* Наследуем шрифты для инпутов и кнопок */
@@ -69,15 +74,15 @@ input,
 button,
 textarea,
 select {
-	font-family: 'Inter';
+  font-family: "Roboto", sans-serif;
 }
 
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
-	* {
-		animation-duration: 0.01ms !important;
-		animation-iteration-count: 1 !important;
-		transition-duration: 0.01ms !important;
-		scroll-behavior: auto !important;
-	}
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
