--- a/src/styles/Medic.module.scss
+++ b/src/styles/Medic.module.scss
@@ -8,9 +8,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    display: grid;
+    display: none;
     grid-template-columns: 300px 1fr;
     z-index: 100;
+
+    @media (max-width: 500px) {
+      display: grid;
+    }
 
     .content {
       background-color: #ff8181;
