--- a/src/styles/Registration.module.scss
+++ b/src/styles/Registration.module.scss
@@ -40,6 +40,24 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+
+    label {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      position: relative;
+
+      .errorMsg {
+        bottom: -2px;
+        left: 0;
+        right: 0;
+        color: red;
+        font-size: 16px;
+        text-transform: uppercase;
+        text-align: center;
+        position: absolute;
+      }
+    }
   }
 
   &__step2-container {
