--- a/src/Components/FormLogin/FormLogin.module.scss
+++ b/src/Components/FormLogin/FormLogin.module.scss
@@ -1,4 +1,4 @@
-@import "@/styles/colors.scss";
+@import '@/styles/colors.scss';
 
 .container {
   margin: 70px 70px 70px 0;
@@ -13,5 +13,5 @@
   border: 1px solid #454545;
   padding-left: 20px;
   font-size: 20px;
-  color: rgba(30, 30, 30, 0.5);
+  color: rgba(69, 69, 69, 0.5);
 }
