--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -33,3 +33,18 @@
   width: 20%;
   background-color: red;
 }
+
+.mobile_version {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
+  .mobile_version {
+    display: block;
+    height: 100vh;
+    background-color: #f8fbff;
+  }
+}
