--- a/src/styles/Message.module.scss
+++ b/src/styles/Message.module.scss
@@ -104,16 +104,14 @@
     width: 100%;
     height: 100vh;
     flex-direction: column;
-    background-color: #eaf3ff;
+    background-color: #f8fbff;
 
     @media (max-width: 500px) {
       display: none;
     }
 
     .menu {
-      margin-top: 200px;
-      margin-left: 110px;
-      transform: scale(1.5);
+      margin-top: 90px;
     }
 
     .content {
@@ -129,7 +127,7 @@
         padding: 50px 70px 0 70px;
 
         label {
-          background-color: #d7e8ff;
+          background-color: #f8fbff;
           display: flex;
           align-items: center;
           height: 40px;
@@ -224,7 +222,7 @@
 
     .contacts {
       height: 100vh;
-      background-color: #eaf3ff;
+      background-color: #f8fbff;
       padding: 0 20px;
       margin-top: 20px;
 
@@ -241,7 +239,7 @@
 
         .info {
           h3 {
-            font-family: 'Inter';
+            font-family: "Inter";
             font-weight: 600;
             font-size: 16px;
             line-height: 17px;
