--- a/src/Components/FormLogin/FormLogin.module.scss
+++ b/src/Components/FormLogin/FormLogin.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   margin: 70px 70px 70px 0;
+  position: relative;
 }
 
 .input {
@@ -14,4 +15,12 @@
   padding-left: 20px;
   font-size: 20px;
   color: rgba(69, 69, 69, 0.5);
+}
+
+.errorMsg {
+  color: red;
+  font-size: 16px;
+  margin: -50px 0;
+  text-transform: uppercase;
+  text-align: center;
 }
