--- a/src/Components/MainPage/Carucel/Carucel.module.scss
+++ b/src/Components/MainPage/Carucel/Carucel.module.scss
@@ -2,7 +2,7 @@
   width: 920px;
   height: 80px;
   display: flex;
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
   overflow: hidden;
   align-items: center;
   -webkit-touch-callout: none;
@@ -37,7 +37,7 @@
 }
 
 .arrows_left {
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
   width: 80px;
   height: 80px;
   display: flex;
@@ -47,7 +47,7 @@
   }
 }
 .arrows_right {
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
   width: 80px;
   height: 80px;
   display: flex;
