--- a/src/Components/MainPage/Header/Header.module.scss
+++ b/src/Components/MainPage/Header/Header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin-top: 5px;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
   height: 80px;
   align-items: center;
   justify-content: flex-end;
@@ -13,7 +13,7 @@
   justify-content: space-around;
   align-items: center;
   display: flex;
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
 }
 
 .settings_container {
