--- a/src/Components/NavBar/NavBar.module.scss
+++ b/src/Components/NavBar/NavBar.module.scss
@@ -95,7 +95,7 @@
   align-items: center;
   display: flex;
   margin-top: 10%;
-  height: 64vh;
+  height: 68vh;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -103,7 +103,7 @@
 .cont_nav {
   width: 90%;
   display: flex;
-  height: 30vh;
+  height: 25vh;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -137,8 +137,9 @@
 }
 
 .line {
-  width: 13%;
+  width: 100%;
   height: 60px;
+  z-index: 1;
   margin-top: 160px;
   background-color: #ff8181;
 }
