--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100vh;
   flex-direction: column;
-  background-color: #f5f5f5;
+  background-color: #f8fbff;
 }
 
 .content {
