--- a/src/Components/MainPage/Carucel/Carucel.module.scss
+++ b/src/Components/MainPage/Carucel/Carucel.module.scss
@@ -61,6 +61,7 @@
 .content_container {
   overflow: hidden;
   width: 98%;
+  transition: 0.5s;
   display: flex;
   justify-content: space-between;
 }
