--- a/src/Components/MainPage/OptionsForUser/OptionsForUser.module.scss
+++ b/src/Components/MainPage/OptionsForUser/OptionsForUser.module.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: 361px;
   height: 502px;
+  z-index: 13131;
   background-color: #ff8181;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
   border-radius: 76px;
