Исправил все ошибки

--- a/src/Components/MainPage/HeaderMainPage/HeaderMainPage.module.scss
+++ b/src/Components/MainPage/HeaderMainPage/HeaderMainPage.module.scss
@@ -28,6 +28,12 @@
   }
 }
 
+.plus_container {
+  display: flex;
+  font-size: 30px;
+  margin-right: 20px;
+}
+
 .settings_container {
   margin-right: 10px;
   img {
