--- a/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
+++ b/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
@@ -37,6 +37,11 @@
         font-weight: 400;
         display: flex;
         justify-content: space-between;
+
+        a {
+          text-decoration: none;
+          color: #fff;
+        }
       }
     }
 
