--- a/src/styles/Message_id.module.scss
+++ b/src/styles/Message_id.module.scss
@@ -48,40 +48,50 @@
     }
   }
 
-  .entry_field {
-    height: 35px;
-    background: #f9f9f9;
-    display: grid;
-    grid-template-columns: 40px 1fr 40px;
-    align-items: center;
-    justify-content: space-between;
+  .mobile_footer_main_container {
+    width: 100%;
+    position: fixed;
+    bottom: 5px;
+    right: 0;
+    display: flex;
+    align-items: flex-end;
+    background-color: #f8fbff;
 
-    .FiPaperclip {
+    .entry_field {
+      background: #f9f9f9;
+      display: grid;
+      grid-template-columns: 40px 1fr 40px;
+      align-items: center;
+      justify-content: space-between;
       width: 100%;
-      display: flex;
-      justify-content: center;
-      font-size: 21px;
-      color: #b5b5b5;
-    }
 
-    .MdKeyboardVoice {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      font-size: 24px;
-      color: #333;
-    }
+      .FiPaperclip {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-size: 21px;
+        color: #b5b5b5;
+      }
 
-    .textarea {
-      display: block;
-      overflow: hidden;
-      resize: none;
-      width: 100%;
-      background: #ffffff;
-      border-radius: 23px;
-      padding: 2px 10px;
-      outline: none;
-      border: 0;
+      .MdKeyboardVoice {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-size: 24px;
+        color: #333;
+      }
+
+      .textarea {
+        display: block;
+        overflow: hidden;
+        resize: none;
+        width: 100%;
+        background: #ffffff;
+        border-radius: 23px;
+        padding: 2px 10px;
+        outline: none;
+        border: 0;
+      }
     }
   }
 }
