--- a/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
+++ b/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
@@ -31,7 +31,7 @@
 
 .TimePicker {
   width: 300px;
-  margin: 25px 0;
+  margin: 25px 0 !important;
   label {
     color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
