--- a/src/Components/EntriesPage/EntriesModal/EntriesModal.module.scss
+++ b/src/Components/EntriesPage/EntriesModal/EntriesModal.module.scss
@@ -5,11 +5,12 @@
   top: 0;
   right: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0);
 
   .container {
     border-radius: 35px 35px 0px 0px;
     background-color: #ff8181;
+    border: 5px solid #ff8181;
     position: relative;
     margin-top: 50px;
     height: calc(100% - 50px);
