Сделал профиль и добавил заготовки других страниц

--- a/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
+++ b/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
@@ -15,6 +15,7 @@
   .content {
     background-color: #ff8181;
     padding: 0 20px;
+    border-radius: 0px 20px 20px 0px;
 
     .img_user {
       height: 100px;
