--- a/src/Components/HeaderMobile/HeaderMobile.module.scss
+++ b/src/Components/HeaderMobile/HeaderMobile.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 10px;
 }
 .mobile_profile_container {
   width: 200px;
@@ -11,11 +10,14 @@
   padding-left: 5px;
   background-color: #ff8181;
   border-radius: 25px;
+  margin-left: 10px;
+
   img {
     width: 40px;
     height: 40px;
     margin-right: 20px;
   }
+  
   .mobile_profile_name {
     display: flex;
     color: white;
