--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -1,108 +1,48 @@
-.container {
-  width: 100%;
-  display: flex;
-}
-
-.main_container {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  flex-direction: column;
-  background-color: #f5f5f5;
-}
-
-.content {
-  width: 100%;
-  display: flex;
-}
-
-.navbar_container {
-  position: absolute;
-  width: 361px;
-  height: 502px;
-  background-color: #ff8181;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
-  border-radius: 76px;
-}
-
-.content_container {
-  width: 80%;
-}
-
-.settings_container {
-  width: 20%;
-  background-color: red;
-}
-
 .mobile_version {
   display: none;
-
-  .menu {
-    display: flex;
-    background: #000;
-    background: #ff8181;
-    border-radius: 19.5px;
-    width: 298px;
-    height: 31px;
-    margin: 0 auto;
-
-    .active_btn {
-      color: #000;
-      background-color: #fff;
-    }
-
-    button {
-      margin: 2px;
-      border: 0;
-      width: 100%;
-      background-color: transparent;
-      border-radius: 19.5px;
-      color: #fff;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 19px;
-    }
-  }
 
   .content {
     width: 100%;
     background: #f8fbff;
-    margin-top: 35px;
+    margin-top: 32px;
     padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 100px;
 
-    .block {
-      width: 100%;
-      height: 213px;
-      border: 1px solid #333;
-      border: 1px solid rgba(190, 190, 190, 0.7);
-      border-radius: 38px;
-      margin-bottom: 35px;
-      padding: 15px 25px;
+    .user_info {
+      margin-bottom: 30px;
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
 
-      .bottom {
-        display: flex;
-        justify-content: space-between;
-
-        h2:nth-child(2) {
-          margin-top: 20px;
-        }
-
-        .address {
-          display: flex;
-          align-items: flex-end;
-        }
+      img {
+        width: 130px;
+        height: 130px;
       }
 
-      h2 {
+      p {
+        width: 30%;
         font-weight: 500;
         font-size: 16px;
-        line-height: 19px;
+      }
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      input {
+        padding: 10px 10px 10px 20px;
+        background: #ffffff;
+        border: 1px solid #454545;
+        border-radius: 10px;
+        outline: none;
+        font-weight: 500;
+        font-size: 16px;
+
+        &::placeholder {
+          color: rgba(69, 69, 69, 0.5);
+        }
       }
     }
   }
