--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -12,7 +12,7 @@
 }
 
 .content {
-  width: 100%;
+  width: 90%;
   display: flex;
 }
 
@@ -27,6 +27,7 @@
 
 .content_container {
   width: 80%;
+  margin-left: 7%;
 }
 
 .settings_container {
