--- a/src/Components/MainPage/Carucel/Carucel.module.scss
+++ b/src/Components/MainPage/Carucel/Carucel.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 920px;
+  width: 70%;
   height: 80px;
   display: flex;
   background-color: #f8fbff;
@@ -14,7 +14,7 @@
 }
 
 .arrow_cont {
-  width: 920px;
+  width: 70%;
   height: 80px;
   display: flex;
   justify-content: space-between;
