--- a/src/Components/MainPage/SettingsProfile/SettingsProfile.module.scss
+++ b/src/Components/MainPage/SettingsProfile/SettingsProfile.module.scss
@@ -1,5 +1,9 @@
 .settings_container {
   width: 20%;
+  position: fixed;
+  top: 0;
+  right: 0;
   height: 90vh;
   background-color: red;
+  margin-top: 90px;
 }
