--- a/src/Components/Auth/FormLogin/FormLogin.module.scss
+++ b/src/Components/Auth/FormLogin/FormLogin.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/colors.scss';
 
 .container {
-  margin: 70px 70px 70px 0;
+  // margin: 70px 70px 70px 0;
   position: relative;
 }
 
