--- a/src/Components/HeaderMobile/HeaderMobile.module.scss
+++ b/src/Components/HeaderMobile/HeaderMobile.module.scss
@@ -16,8 +16,10 @@
     width: 40px;
     height: 40px;
     margin-right: 20px;
+    background: #fff;
+    border-radius: 50%;
   }
-  
+
   .mobile_profile_name {
     display: flex;
     color: white;
