--- a/src/Components/NavBar/NavBar.module.scss
+++ b/src/Components/NavBar/NavBar.module.scss
@@ -1,147 +1,24 @@
 .navbar_container {
-  width: 5%;
+  width: 22%;
   height: 100vh;
+}
+
+.find_container {
+  width: 100%;
+  height: 90px;
+  margin-top: 5px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: flex-end;
 }
 
-.translate_container {
-  margin-top: 30px;
-  cursor: pointer;
+.img {
+  width: 74px;
+  height: 72px;
 }
 
-.line {
-  width: 4.2%;
-  opacity: 0;
-  height: 45px;
-  position: absolute;
-  background-color: #ff8181;
-  border-radius: 25px 0 0 25px;
-}
-
-.profile_container {
-  margin-left: 10px;
-  display: flex;
-  align-items: center;
-  margin-top: 70px;
-  width: 90%;
-  height: 45px;
-  img {
-    z-index: 11;
-  }
-}
-
-.nav_container {
-  margin-top: 100px;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .home_img {
-    width: 30px;
-    height: 30px;
-  }
-  .find_img {
-    width: 30px;
-    height: 30px;
-  }
-  .message_img {
-    width: 30px;
-    height: 21px;
-  }
-}
-
-.exit_container {
-  margin-top: 300px;
-}
-
-.navbar_infos_container {
-  width: 0%;
-  height: 100vh;
-  position: absolute;
-  background-color: rgb(255, 255, 255);
-  margin-left: 4.8%;
-  z-index: 13131;
-  // background-color: blue;
-}
-
-.translate_cont {
-  margin-top: 30px;
-  height: 35px;
-  display: flex;
-  align-items: center;
-  color: rgb(66, 66, 66);
-  font-size: 18px;
-  font-weight: 500;
-  opacity: 0;
-}
-
-.profile_cont {
-  opacity: 0;
-  background-color: #ff8181;
-  border-radius: 0 25px 25px 0;
-  height: 45px;
-  width: 90%;
-  cursor: pointer;
-  margin-top: 70px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  p {
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    font-weight: 500;
-  }
-}
-
-.nav_cont {
-  opacity: 0;
-  margin-top: 100px;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .home {
-    height: 30px;
-    color: rgb(66, 66, 66);
-    font-size: 18px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-  }
-  .find {
-    height: 30px;
-    color: rgb(66, 66, 66);
-    font-size: 18px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-  }
-  .message {
-    height: 21px;
-    color: rgb(66, 66, 66);
-    font-size: 18px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-  }
-}
-
-.exit_cont {
-  opacity: 0;
-  margin-top: 300px;
-  display: flex;
-  height: 20px;
-  align-items: center;
-  color: rgb(66, 66, 66);
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.exit_img {
-  display: flex;
-  align-items: center;
+.navbar_container_content {
+  width: 87%;
+  margin-top: 160px;
 }
 
 .mobile_nav {
@@ -170,6 +47,8 @@
       width: 40px;
       height: 40px;
       margin-right: 20px;
+      background: #fff;
+      border-radius: 50px;
     }
     .mobile_profile_name {
       display: flex;
@@ -182,4 +61,88 @@
       align-items: center;
     }
   }
+}
+
+.profile {
+  display: flex;
+  width: 100%;
+  margin-bottom: 10px;
+  justify-content: flex-end;
+  .profile_container {
+    width: 200px;
+    display: flex;
+    cursor: pointer;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 25px 0 0 25px;
+    height: 60px;
+    background-color: #ff8181;
+    img {
+      height: 58px;
+      width: 58px;
+    }
+    .profile_name {
+      display: flex;
+      color: white;
+      flex-direction: column;
+      justify-content: center;
+      font-weight: 400;
+      font-size: 17px;
+      margin-right: 32px;
+      align-items: center;
+    }
+  }
+}
+
+.navigation_container {
+  align-items: center;
+  display: flex;
+  margin-top: 30%;
+  height: 62vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cont_nav {
+  width: 90%;
+  display: flex;
+  height: 23vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.go_out_cont {
+  width: 90%;
+  display: flex;
+  font-size: 19px;
+  color: #454545;
+  cursor: pointer;
+  justify-content: space-between;
+}
+
+.content_nav {
+  display: flex;
+  p {
+    text-decoration: none;
+  }
+  align-items: center;
+  font-size: 19px;
+  cursor: pointer;
+  color: #454545;
+  img {
+    margin-right: 10px;
+  }
+}
+
+.go_out_img {
+  display: flex;
+  align-items: center;
+}
+
+.line {
+  width: 100%;
+  height: 60px;
+  z-index: 1;
+  margin-top: 160px;
+  background-color: #ff8181;
 }
