--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -30,6 +30,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      margin-bottom: 100px;
 
       input {
         padding: 10px 10px 10px 20px;
@@ -65,7 +66,7 @@
   }
   .mobile_version {
     display: block;
-    height: 100vh;
+    height: auto;
     background-color: #f8fbff;
   }
 }
