--- a/src/Components/MainPage/OptionsForUser/OptionsForUser.module.scss
+++ b/src/Components/MainPage/OptionsForUser/OptionsForUser.module.scss
@@ -10,7 +10,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  margin-left: 7%;
+  margin-top: 1%;
 }
 
 .top_container {
