Теперь можно выбрать только вперед на 3 месяца

--- a/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
+++ b/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
@@ -29,6 +29,12 @@
   }
 }
 
+.errormsg {
+  color: red;
+  font-size: 13px;
+  margin-left: 2px;
+}
+
 .TimePicker {
   width: 300px;
   margin: 25px 0 !important;
