--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -30,6 +30,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      margin-bottom: 100px;
 
       input {
         padding: 10px 10px 10px 20px;
@@ -44,6 +45,17 @@
           color: rgba(69, 69, 69, 0.5);
         }
       }
+
+      button {
+        width: 200px;
+        margin: 0 auto;
+        border: 0;
+        background: #ff8181;
+        color: #fff;
+        height: 40px;
+        border-radius: 20px;
+        font-size: 16px;
+      }
     }
   }
 }
@@ -54,7 +66,7 @@
   }
   .mobile_version {
     display: block;
-    height: 100vh;
+    height: auto;
     background-color: #f8fbff;
   }
 }
