Сделал возможность создавать записи

--- a/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
+++ b/src/Components/EntriesPage/EntriesModal/DateSelect/DateSelect.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   position: relative;
+
+  span {
+    color: #000 !important;
+  }
 }
 
 .DatePicker {
