--- a/src/Components/HeaderMobile/HeaderMobile.module.scss
+++ b/src/Components/HeaderMobile/HeaderMobile.module.scss
@@ -7,14 +7,15 @@
   width: 200px;
   display: flex;
   align-items: center;
-  padding-left: 5px;
   background-color: #ff8181;
   border-radius: 25px;
   margin-left: 10px;
+  margin-top: 10px;
+  padding: 5px 5px;
 
   img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-right: 20px;
     background: #fff;
     border-radius: 50%;
