--- a/src/Components/MessagePage/Mobile/Content/Content.module.scss
+++ b/src/Components/MessagePage/Mobile/Content/Content.module.scss
@@ -1,12 +1,11 @@
 .contacts {
   height: 100vh;
   background-color: #f8fbff;
-  padding: 0 20px;
   margin-top: 20px;
   overflow: hidden;
 
   .contact {
-    padding: 10px 0;
+    padding: 10px 20px;
     display: grid;
     align-items: center;
     grid-template-columns: 70px 1fr 35px;
@@ -14,28 +13,30 @@
     position: relative;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
-      left: -130px;
+      left: -200px;
       top: 0;
       bottom: 0;
-      width: 150px;
+      width: 200px;
       height: 100%;
-      background: url("/delete.png") no-repeat;
+      background: #808080 url('/delete2.png') no-repeat;
+      background-position-x: left;
       background-size: contain;
       z-index: 1000;
     }
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      right: -170px;
+      right: -200px;
       top: 0;
       bottom: 0;
-      width: 150px;
+      width: 200px;
       height: 100%;
-      background: url("/fix.png") no-repeat;
+      background: #808080 url('/fix2.png') no-repeat;
       background-size: contain;
+      background-position-x: right;
       z-index: 1000;
     }
 
