--- a/src/styles/Message_id.module.scss
+++ b/src/styles/Message_id.module.scss
@@ -7,6 +7,17 @@
   display: none;
   overflow: hidden;
 
+  .layout {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba($color: #fff, $alpha: 0.01);
+    backdrop-filter: blur(5px);
+  }
+
   .message_img {
     position: fixed;
     z-index: 0;
@@ -31,8 +42,6 @@
   }
 
   .content {
-    position: relative;
-    z-index: 1;
     overflow: auto;
     height: 100%;
 
@@ -42,8 +51,10 @@
       margin-bottom: 20px;
       width: 100%;
       display: flex;
+      position: relative;
 
       h2 {
+        position: relative;
         padding: 5px 10px;
         font-weight: 300;
         font-size: 15px;
@@ -52,6 +63,21 @@
         background: #fff;
         border-radius: 12px;
         max-width: 300px;
+        user-select: none;
+      }
+
+      .messageBlock {
+        position: absolute;
+        z-index: 1000;
+        bottom: -160px;
+        background: #fff;
+        padding: 10px;
+        border-radius: 13px;
+        text-align: center;
+      }
+
+      .messageBlockMe {
+        right: 0;
       }
     }
 
