Теперь возможно добавлять сообщения

--- a/src/styles/Message_id.module.scss
+++ b/src/styles/Message_id.module.scss
@@ -44,7 +44,7 @@
   .content {
     overflow: auto;
     height: 100%;
-    background: transparent;
+    background: rgba($color: #fff, $alpha: 0.1);
 
     padding: 100px 20px 100px 20px;
 
