Добавил экраны доступа

--- a/src/Components/NavBar/NavBar.module.scss
+++ b/src/Components/NavBar/NavBar.module.scss
@@ -200,7 +200,7 @@
   height: 100vh;
   display: flex;
   justify-content: flex-end;
-  align-items: end;
+  align-items: flex-end;
   padding-right: 5px;
   padding-bottom: 5px;
 }
