--- a/src/Components/EntriesPage/EntriesModal/EntriesModal.module.scss
+++ b/src/Components/EntriesPage/EntriesModal/EntriesModal.module.scss
@@ -104,11 +104,11 @@
             width: 100%;
             border: 0;
             padding: 0;
-
+            font-size: 15px;
             margin: 0;
             outline: none;
-            font-size: 20px;
-            padding-left: 5px;
+            // font-size: 20px;
+            padding-left: 0px;
           }
         }
 
