--- a/src/Components/HeaderMobile/HeaderMobile.module.scss
+++ b/src/Components/HeaderMobile/HeaderMobile.module.scss
@@ -9,8 +9,7 @@
   align-items: center;
   background-color: #ff8181;
   border-radius: 25px;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin: 5px;
   padding: 5px 5px;
 
   img {
