--- a/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
+++ b/src/Components/MainPage/MobileMenu/MobileMenu.module.scss
@@ -7,6 +7,7 @@
   display: none;
   grid-template-columns: 300px 1fr;
   z-index: 100;
+  overflow: auto;
 
   @media (max-width: 500px) {
     display: grid;
