--- a/src/styles/Message_id.module.scss
+++ b/src/styles/Message_id.module.scss
@@ -21,7 +21,7 @@
   .message_img {
     position: fixed;
     z-index: 0;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
   }
 
@@ -46,7 +46,7 @@
     height: 100%;
     background: rgba($color: #fff, $alpha: 0.1);
 
-    padding: 100px 20px 100px 20px;
+    padding: 100px 20px;
 
     .message {
       margin-bottom: 20px;
