--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,7 +67,7 @@
   width: 100%;
   max-width: 290px;
   height: 60px;
-  background: #1bbc9b;
+  background: #ff8181;
   color: #fff;
   font-size: 1.125rem;
   font-weight: 700;
