--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -1,6 +1,57 @@
 .container {
-  width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f8fbff;
+
+
+
+  .main_container {
+    position: relative;
+
+    .logout {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      display: flex;
+      align-items: center;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 29px;
+      cursor: pointer;
+
+      .icon {
+        margin-left: 20px;
+      }
+    }
+
+    .call {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+
+      background: #ff8181;
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .icon {
+        font-size: 60px;
+        color: #fff;
+        margin-left: -8px;
+        margin-bottom: -5px;
+      }
+    }
+
+    .content {
+      h1 {
+        font-size: 40px;
+        color: red;
+      }
+    }
+  }
 }
 
 .main_container {
@@ -9,30 +60,6 @@
   height: 100vh;
   flex-direction: column;
   background-color: #f8fbff;
-}
-
-.content {
-  width: 90%;
-  display: flex;
-}
-
-.navbar_container {
-  position: absolute;
-  width: 361px;
-  height: 502px;
-  background-color: #ff8181;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
-  border-radius: 76px;
-}
-
-.content_container {
-  width: 80%;
-  margin-left: 7%;
-}
-
-.settings_container {
-  width: 20%;
-  background-color: red;
 }
 
 .mobile_version {
