Для всех страниц добавил боковое меню

--- a/src/pages/center/Center.module.scss
+++ b/src/pages/center/Center.module.scss
@@ -1,3 +1,22 @@
+.container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f3f8ff;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.mobile_container {
+  display: none;
+
+  @media (max-width: 500px) {
+    display: block;
+  }
+}
+
+
 .content {
   padding: 20px 20px;
   padding-bottom: 100px;
@@ -184,3 +203,4 @@
     }
   }
 }
+
