--- a/src/pages/map/Map.module.scss
+++ b/src/pages/map/Map.module.scss
@@ -1,9 +1,26 @@
-.main_container {
+.mobile_container {
   width: 100vw;
   height: 100vh;
+  display: none;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f8fbff;
 }
 
 .cont {
   width: 100%;
   height: 95vh;
+}
+
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
+  .mobile_container {
+    display: block;
+    background-color: #f8fbff;
+  }
 }
