--- a/src/pages/message/Message.module.scss
+++ b/src/pages/message/Message.module.scss
@@ -1,40 +1,17 @@
 .container {
-  width: 100%;
-  display: flex;
-  @media (max-width: 500px) {
-    .container {
-      display: none;
-    }
-  }
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f3f8ff;
 
-  .main_container_mobile {
+  @media (max-width: 500px) {
     display: none;
   }
+}
+
+.main_container_mobile {
+  display: none;
+
   @media (max-width: 500px) {
     display: block;
-  }
-
-  .main_container {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: column;
-    background-color: #f8fbff;
-
-    @media (max-width: 500px) {
-      display: none;
-    }
-
-    .menu {
-      margin-top: 90px;
-    }
-  }
-
-  .main_container_mobile {
-    display: none;
-
-    @media (max-width: 500px) {
-      display: block;
-    }
   }
 }
