--- a/src/pages/profile/Profile.module.scss
+++ b/src/pages/profile/Profile.module.scss
@@ -1,3 +1,9 @@
+.container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f3f8ff;
+}
+
 .mobile_version {
   display: none;
 
