--- a/src/Components/Message/Desktop/Content.module.scss
+++ b/src/Components/Message/Desktop/Content.module.scss
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-radius: 15px;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
 
   .chat,
   .search {
@@ -38,7 +39,158 @@
     }
   }
 
+  .messages {
+    padding: 10px 70px;
+
+    .message {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid rgba(255, 129, 129, 0.2);
+      padding: 10px 0;
+
+      img {
+        width: 50px;
+        height: 50px;
+      }
+
+      .info {
+        width: 200px;
+
+        h3 {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 17px;
+          color: #373737;
+        }
+
+        .truncate {
+          width: 200px;
+
+          .truncate_text {
+            font-size: 15px;
+            color: darkslategrey;
+            white-space: nowrap; /* Отменяем перенос текста */
+            overflow: hidden; /* Обрезаем содержимое */
+            text-overflow: ellipsis; /* Многоточие */
+          }
+        }
+      }
+
+      .notification {
+        background-color: #ff8181;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        border-radius: 20px;
+        min-width: 20px;
+        height: 20px;
+        padding: 5px;
+
+        .BsPinAngleFill {
+          margin-left: 2px;
+        }
+      }
+
+      .dots {
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .isSelectDots {
+        position: absolute;
+        right: -40px;
+        top: 50px;
+        background: #ff8181;
+        width: 100px;
+        border-radius: 15px;
+        padding: 10px;
+        z-index: 1;
+
+        p {
+          color: #fff;
+          z-index: 16px;
+          cursor: pointer;
+          opacity: 0.8;
+        }
+      }
+    }
+  }
+
+  .calls {
+    padding: 10px 70px;
+
+    .call {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid rgba(255, 129, 129, 0.2);
+      padding: 10px 0;
+
+      img {
+        width: 50px;
+        height: 50px;
+      }
+
+      .info {
+        width: 250px;
+
+        h3 {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 17px;
+          color: #373737;
+        }
+
+        p {
+          display: flex;
+          align-items: center;
+
+          .icon {
+            margin-right: 5px;
+            color: red;
+          }
+
+          .success {
+            transform: rotate(180deg);
+            color: green;
+          }
+        }
+      }
+
+      .call_icon {
+        display: flex;
+        align-items: center;
+        font-size: 25px;
+        color: #ff8181;
+        cursor: pointer;
+      }
+    }
+  }
+
   .chat {
+    position: relative;
+    .circle {
+      position: absolute;
+      top: 60px;
+      right: 0;
+      background: #ff8181;
+      width: 20px;
+      height: 20px;
+
+      div {
+        background: #fff;
+        width: 100%;
+        height: 100%;
+        border-top-right-radius: 50%;
+      }
+    }
+
     .nav {
       padding: 0 70px;
       margin-top: 50px;
