--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   padding: 0 20px;
   height: 100vh;
+  box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.1);
+  position: relative;
+  z-index: 2;
 
   .user {
     display: flex;
