--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -1,10 +1,11 @@
 .container {
   display: grid;
   grid-template-columns: 300px 1fr;
-  background: #f8fbff;
+  // background: #f8fbff;
 
   .main_container {
     position: relative;
+    background-color: #f8fbff;
 
     .logout {
       position: absolute;
@@ -34,6 +35,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
 
       .icon {
         font-size: 60px;
@@ -50,14 +52,6 @@
       }
     }
   }
-}
-
-.main_container {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  flex-direction: column;
-  background-color: #f8fbff;
 }
 
 .mobile_version {
