--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -17,6 +17,9 @@
       font-size: 24px;
       line-height: 29px;
       cursor: pointer;
+      background: #fff;
+      padding: 5px 10px;
+      border-radius: 50px;
 
       .icon {
         margin-left: 20px;
