--- a/src/pages/entries/Entries.module.scss
+++ b/src/pages/entries/Entries.module.scss
@@ -14,21 +14,102 @@
     justify-content: center;
     align-items: center;
 
+    .createEntriesMap {
+      width: 900px;
+      height: 700px;
+      background: #fff;
+      border-radius: 55px;
+      padding: 30px;
+
+      .selectCenter {
+        height: 100px;
+
+        p {
+          margin-bottom: 10px;
+          font-size: 18px;
+        }
+
+        .btn {
+          display: flex;
+          gap: 20px;
+
+          .select {
+            width: 400px;
+          }
+
+          button {
+            background: #ff8181;
+            width: 100px;
+            color: #fff;
+            border-radius: 5px;
+            transition: all 0.2s ease-in-out;
+
+            &:hover {
+              opacity: 0.8;
+            }
+          }
+        }
+      }
+
+      .map {
+        width: 100%;
+        height: calc(100% - 100px);
+      }
+    }
+
     .createEntriesContent {
-      width: 800px;
-      height: 600px;
-      background: #ff8181;
-      border-radius: 25px;
+      width: 900px;
+      height: 700px;
+      background: #fff;
+      border-radius: 55px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 20px;
-      padding: 20px;
+      padding: 30px;
 
       .selectCenter,
       .centerSettings {
-        background: #fff;
-        border-radius: 25px;
-        padding: 20px;
+        background: #f8fbff;
+        border-radius: 55px;
+        padding: 30px;
+      }
+
+      .selectCenter {
+        .btn {
+          height: 40px;
+          margin-bottom: 20px;
+          background: #ff8181;
+          color: #fff;
+          border-radius: 5px;
+          padding: 0 10px;
+          transition: all 0.2s ease-in-out;
+
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+
+        .center_info {
+          display: flex;
+          gap: 20px;
+          justify-content: space-between;
+          align-items: center;
+
+          img {
+            width: 150px;
+            height: 150px;
+          }
+
+          p {
+            font-size: 16px;
+          }
+        }
+
+        .p {
+          margin-top: 20px;
+          font-size: 16px;
+          text-align: justify;
+        }
       }
 
       .centerSettings {
@@ -76,19 +157,15 @@
   }
 
   .content {
-    max-width: 1000px;
-    margin: 20px auto;
-    background: #fff;
-    min-height: calc(100vh - 40px);
-    border-radius: 25px;
+    width: 100%;
+    background: #f8fbff;
+    height: 100vh;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
 
     .entries {
       position: relative;
 
       .search_entries {
-        border-top-right-radius: 25px;
-        border-top-left-radius: 25px;
         background: #000;
         padding: 10px 70px;
         background: #ff8181;
@@ -100,8 +177,8 @@
           border-radius: 50px;
           width: 200px;
           font-size: 16px;
-          color: #fff;
-          background: rgba($color: #f93333, $alpha: 0.6);
+          color: #333;
+          background: rgba($color: #fff, $alpha: 1);
           box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
           transition: all 0.2s ease-in-out;
 
